--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-config'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-appcheck'
+    implementation 'com.google.firebase:firebase-appcheck-debug'
+    implementation 'com.google.firebase:firebase-appcheck-playintegrity'
     
     // Google Play Services
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
