--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Internet and Network Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    
+    <!-- Google Play Services -->
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    
+    <!-- Firebase Messaging -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".VOHApplication"
@@ -16,7 +23,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Base.Theme.VOHoportunitysconect"
+        android:theme="@style/Theme.VOHoportunitysconect"
+        android:hardwareAccelerated="true"
+        android:largeHeap="true"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <!-- Google Play Services -->
@@ -35,6 +45,17 @@
         <meta-data
             android:name="com.google.android.gms.games.CLIENT_SECRET"
             android:value="@string/game_services_client_secret" />
+
+        <!-- Firebase Configuration -->
+        <meta-data
+            android:name="firebase_database_url"
+            android:value="https://vohoportunitysconect-default-rtdb.firebaseio.com" />
+        <meta-data
+            android:name="firebase_app_check_debug_token"
+            android:value="true" />
+        <meta-data
+            android:name="firebase_app_check_debug_provider_factory"
+            android:value="com.google.firebase.appcheck.debug.DebugAppCheckProviderFactory" />
 
         <activity
             android:name=".activities.LoginActivity"
@@ -70,6 +91,11 @@
             android:name=".activities.CreateOpportunityActivity"
             android:exported="false"
             android:label="@string/create_opportunity_title"/>
+
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
 
     </application>
 
