--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath 'com.android.tools.build:gradle:8.4.0' // Updated to latest stable
         classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
     }
 }
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-} 
