--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
 
     lint {
         baseline = file("lint-baseline.xml")
-        abortOnError = false
+        abortOnError false
         checkAllWarnings true
         warningsAsErrors true
         disable 'deprecation'
