--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,6 @@ dependencies {
     // Navigation
     implementation 'androidx.navigation:navigation-fragment:2.7.7'
     implementation 'androidx.navigation:navigation-ui:2.7.7'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
     
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
@@ -87,27 +85,20 @@ dependencies {
     // Multidex
     implementation 'androidx.multidex:multidex:2.0.1'
     
-    // Firebase
+    // Firebase - Essential services
     implementation platform('com.google.firebase:firebase-bom:32.7.2')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-messaging'
-    implementation 'com.google.firebase:firebase-dynamic-links'
-    implementation 'com.google.firebase:firebase-perf'
-    implementation 'com.google.firebase:firebase-config'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-appcheck'
     implementation 'com.google.firebase:firebase-appcheck-debug'
     implementation 'com.google.firebase:firebase-appcheck-playintegrity'
     
-    // Google Play Services
+    // Google Play Services - Essential services
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
-    implementation 'com.google.android.gms:play-services-base:18.3.0'
-    implementation 'com.google.android.gms:play-services-basement:18.3.0'
-    implementation 'com.google.android.gms:play-services-tasks:18.1.0'
-    implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
     
     // UI Components
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
